--- a/pom.xml
+++ b/pom.xml
@@ -74,26 +74,18 @@
 			<artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
-		<dependency>
-    	<groupId>org.codehaus.jackson</groupId>
-    	<artifactId>jackson-core-asl</artifactId>
-    	<version>1.9.11</version>
-		</dependency>
-		
-		<dependency>
-    	<groupId>org.codehaus.jackson</groupId>
-    	<artifactId>jackson-mapper-asl</artifactId>
-    	<version>1.9.11</version>
-		</dependency>
 
-		<!-- 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		 -->
+		
+		<!-- dependency>
+			<groupId>br.gov.frameworkdemoiselle.spatial.component</groupId>
+			<artifactId>georest</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency -->
 
 		<dependency>
 			<groupId>br.gov.frameworkdemoiselle.component</groupId>
@@ -101,11 +93,29 @@
 			<version>2.3.0</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-main</artifactId>
+			<version>2.7.1</version>
+		</dependency>		
+
+		<dependency>
+			<groupId>org.jodd</groupId>
+			<artifactId>jodd</artifactId>
+			<version>3.2.7</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.8.3</version>
 		</dependency>
 
 	</dependencies>
@@ -116,6 +126,13 @@
 	
     <!-- Add repositories for JTS and Hibernate Spatial and Hibernate (JBoss) -->
 	<repositories>
+
+		<repository>
+			<id>demoiselle.spatial.git.snapshot</id>
+			<url>https://raw.github.com/rafaelsoto/demoiselle-spatial/master/mvn-repo/snapshots</url>
+			<snapshots>
+			</snapshots>
+		</repository>
 
 		<repository>
 			<id>OSGEO GeoTools repo</id>
