--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,11 @@
 
 	<dependencies>
 
-		<dependency>
-			<groupId>br.gov.frameworkdemoiselle</groupId>
-			<artifactId>demoiselle-jpa</artifactId>
-			<scope>compile</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>br.gov.frameworkdemoiselle</groupId> -->
+<!-- 			<artifactId>demoiselle-jpa</artifactId> -->
+<!-- 			<scope>compile</scope> -->
+<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>br.gov.frameworkdemoiselle</groupId>
@@ -45,23 +45,23 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-spatial</artifactId>
-			<version>4.0-M1</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-spatial</artifactId> -->
+<!-- 			<version>4.0-M1</version> -->
+<!-- 		</dependency> -->
 
-		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>8.4-701.jdbc3</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>postgresql</groupId> -->
+<!-- 			<artifactId>postgresql</artifactId> -->
+<!-- 			<version>8.4-701.jdbc3</version> -->
+<!-- 		</dependency> -->
 
-		<dependency>
-			<groupId>org.postgis</groupId>
-			<artifactId>postgis-jdbc</artifactId>
-			<version>1.3.3</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.postgis</groupId> -->
+<!-- 			<artifactId>postgis-jdbc</artifactId> -->
+<!-- 			<version>1.3.3</version> -->
+<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
@@ -80,12 +80,6 @@
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
-		<!-- dependency>
-			<groupId>br.gov.frameworkdemoiselle.spatial.component</groupId>
-			<artifactId>georest</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency -->
 
 		<dependency>
 			<groupId>br.gov.frameworkdemoiselle.component</groupId>
@@ -99,23 +93,29 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.geotools</groupId>
-			<artifactId>gt-main</artifactId>
-			<version>2.7.1</version>
-		</dependency>		
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.geotools</groupId> -->
+<!-- 			<artifactId>gt-main</artifactId> -->
+<!-- 			<version>2.7.1</version> -->
+<!-- 		</dependency> -->
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.jodd</groupId> -->
+<!-- 			<artifactId>jodd</artifactId> -->
+<!-- 			<version>3.2.7</version> -->
+<!-- 		</dependency> -->
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>commons-beanutils</groupId> -->
+<!-- 			<artifactId>commons-beanutils</artifactId> -->
+<!-- 			<version>1.8.3</version> -->
+<!-- 		</dependency> -->
 
 		<dependency>
-			<groupId>org.jodd</groupId>
-			<artifactId>jodd</artifactId>
-			<version>3.2.7</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>commons-beanutils</groupId>
-			<artifactId>commons-beanutils</artifactId>
-			<version>1.8.3</version>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
