--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>teste</groupId>
-	<artifactId>teste</artifactId>
+	<groupId>br.gov.serpro</groupId>
+	<artifactId>sharecar</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
