--- a/src/main/resources/demoiselle.properties
+++ b/src/main/resources/demoiselle.properties
@@ -4,4 +4,4 @@
 # Enables JTA transaction strategy, automatically detected if demoiselle-jta component is detected. Use only if you need to overwrite the default behaviour
 #frameworkdemoiselle.transaction.class=br.gov.frameworkdemoiselle.transaction.JTATransaction
 
-frameworkdemoiselle.jdbc.jndi="java:jboss/datasources/sharecarDS"
+frameworkdemoiselle.jdbc.jndi=java:jboss/datasources/sharecarDS
