Apontando para o demoiselle 2.4.0-ALPHA1-SNAPSHOT

--- a/src/test/resources/demoiselle.properties
+++ b/src/test/resources/demoiselle.properties
@@ -1,1 +1,10 @@
 frameworkdemoiselle.transaction.class=br.gov.frameworkdemoiselle.transaction.JPATransaction
+
+
+
+
+#demoiselleJdbcTesteJndiName=java:/testeDS-OLD
+#demoiselle.jdbc.abc.jndi.name=java:/testeDS-OLD
+
+frameworkdemoiselle.jdbc.jndi_name=java:/testeDS-OLD
+
