--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>br.gov.frameworkdemoiselle</groupId>
 		<artifactId>demoiselle-servlet-parent</artifactId>
-		<version>2.3.1</version>
+		<version>2.4.0-ALPHA1-SNAPSHOT</version>
 	</parent>
 
 	<dependencyManagement>
@@ -32,52 +32,38 @@
 	</dependencyManagement>
 
 	<dependencies>
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>br.gov.frameworkdemoiselle</groupId> -->
-<!-- 			<artifactId>demoiselle-jpa</artifactId> -->
-<!-- 			<scope>compile</scope> -->
-<!-- 		</dependency> -->
-
+		<dependency>
+			<groupId>br.gov.frameworkdemoiselle</groupId>
+			<artifactId>demoiselle-jdbc</artifactId>
+			<scope>compile</scope>
+		</dependency>
 		<dependency>
 			<groupId>br.gov.frameworkdemoiselle</groupId>
 			<artifactId>demoiselle-jta</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.hibernate</groupId> -->
-<!-- 			<artifactId>hibernate-spatial</artifactId> -->
-<!-- 			<version>4.0-M1</version> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>postgresql</groupId> -->
-<!-- 			<artifactId>postgresql</artifactId> -->
-<!-- 			<version>8.4-701.jdbc3</version> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.postgis</groupId> -->
-<!-- 			<artifactId>postgis-jdbc</artifactId> -->
-<!-- 			<version>1.3.3</version> -->
-<!-- 		</dependency> -->
-
+		<!-- 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<scope>provided</scope>
 		</dependency>
+ 		-->
 
 		<dependency>
 			<groupId>org.jboss.spec.javax.ws.rs</groupId>
 			<artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson-provider</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
@@ -87,7 +73,6 @@
 			<version>2.3.0</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-ext</artifactId>
@@ -98,53 +83,43 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+			<scope>test</scope>
+		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.geotools</groupId> -->
-<!-- 			<artifactId>gt-main</artifactId> -->
-<!-- 			<version>2.7.1</version> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.jodd</groupId> -->
-<!-- 			<artifactId>jodd</artifactId> -->
-<!-- 			<version>3.2.7</version> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>commons-beanutils</groupId> -->
-<!-- 			<artifactId>commons-beanutils</artifactId> -->
-<!-- 			<version>1.8.3</version> -->
-<!-- 		</dependency> -->
+		<!--
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-main</artifactId>
+			<version>2.7.1</version>
+		</dependency>
 
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<scope>compile</scope>
+			<groupId>org.jodd</groupId>
+			<artifactId>jodd</artifactId>
+			<version>3.2.7</version>
 		</dependency>
+		-->
 	</dependencies>
 
 	<properties>
 		<jboss.as.version>7.1.2.Final</jboss.as.version>
 	</properties>
-	
-    <!-- Add repositories for JTS and Hibernate Spatial and Hibernate (JBoss) -->
-    <!--
+
 	<repositories>
 		<repository>
-			<id>demoiselle.spatial.git.snapshot</id>
-			<url>https://raw.github.com/rafaelsoto/demoiselle-spatial/master/mvn-repo/snapshots</url>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 			<snapshots>
+				<enabled>true</enabled>
 			</snapshots>
-		</repository>
-		<repository>
-			<id>OSGEO GeoTools repo</id>
-			<url>http://download.osgeo.org/webdav/geotools</url>
-		</repository>
-		<repository>
-			<id>Hibernate Spatial repo</id>
-			<url>http://www.hibernatespatial.org/repository</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 		</repository>
 	</repositories>
-    -->
 </project>
