Organização e formatação do código

--- a/src/main/resources/demoiselle.properties
+++ b/src/main/resources/demoiselle.properties
@@ -1,7 +1,4 @@
-# Enables JPA transaction strategy, automatically detected if demoiselle-jpa component is detected. Use only if you need to overwrite the default behaviour
-#frameworkdemoiselle.transaction.class=br.gov.frameworkdemoiselle.transaction.JPATransaction
+#frameworkdemoiselle.persistence.default.datasource.name=ds1
 
-# Enables JTA transaction strategy, automatically detected if demoiselle-jta component is detected. Use only if you need to overwrite the default behaviour
-#frameworkdemoiselle.transaction.class=br.gov.frameworkdemoiselle.transaction.JTATransaction
-
-frameworkdemoiselle.jdbc.jndi.name=java:jboss/datasources/sharecarDS
+#frameworkdemoiselle.persistence.jndi.name=java:jboss/datasources/sharecarDS
+frameworkdemoiselle.persistence.ds1.jndi.name=java:jboss/datasources/sharecarDS
