--- a/src/test/resources/demoiselle.properties
+++ b/src/test/resources/demoiselle.properties
@@ -1,10 +1,11 @@
 frameworkdemoiselle.transaction.class=br.gov.frameworkdemoiselle.transaction.JPATransaction
 
+frameworkdemoiselle.jdbc.jndi.name=java:jboss/datasources/sharecarDS
+frameworkdemoiselle.jdbc.driver.class=com.sun.Driver
+frameworkdemoiselle.jdbc.username=java:jboss/datasources/sharecarDS
+frameworkdemoiselle.jdbc.password=java:jboss/datasources/sharecarDS
 
-
-
-#demoiselleJdbcTesteJndiName=java:/testeDS-OLD
-#demoiselle.jdbc.abc.jndi.name=java:/testeDS-OLD
-
-frameworkdemoiselle.jdbc.jndi_name=java:/testeDS-OLD
+frameworkdemoiselle.jdbc.bbb.jndi.name=java:jboss/datasources/sharecarDS
+frameworkdemoiselle.jdbc.ccc.jndi.name=java:jboss/datasources/sharecarDS
+frameworkdemoiselle.jdbc.ddd.jndi.name=java:jboss/datasources/sharecarDS
 
