Independência do DataSource via JNDI. Agora a conexão é estabeleciada na própria aplicação

--- a/src/main/resources/demoiselle.properties
+++ b/src/main/resources/demoiselle.properties
@@ -1,4 +1,7 @@
-#frameworkdemoiselle.persistence.default.datasource.name=ds1
-
+#frameworkdemoiselle.persistence.default.datasource.name=conn1
 #frameworkdemoiselle.persistence.jndi.name=java:jboss/datasources/sharecarDS
-frameworkdemoiselle.persistence.ds1.jndi.name=java:jboss/datasources/sharecarDS
+
+frameworkdemoiselle.persistence.conn1.driver.class=org.postgresql.Driver
+frameworkdemoiselle.persistence.conn1.url=jdbc:postgresql://localhost:5432/sharecar
+frameworkdemoiselle.persistence.conn1.username=postgres
+frameworkdemoiselle.persistence.conn1.password=postgres
