--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
 			<version>3.2.7</version>
 		</dependency>
 		-->
+
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>8.4-702.jdbc4</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<properties>
