--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.tuckey</groupId>
+			<artifactId>urlrewritefilter</artifactId>
+			<version>4.0.3</version>
+		</dependency>
+
 		<!-- 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
