Ajustes nos métodos do DAO para levar em consideração o usuário logado.= que é passado na camada de serviços.

--- a/services/src/main/webapp/WEB-INF/web.xml
+++ b/services/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,7 @@
 		<web-resource-collection>
 			<web-resource-name>restricted area</web-resource-name>
 			<url-pattern>/api/route</url-pattern>
+			<url-pattern>/api/route/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>*</role-name>
