Autenticação via FORM novamente...

--- a/services/src/main/webapp/WEB-INF/web.xml
+++ b/services/src/main/webapp/WEB-INF/web.xml
@@ -56,6 +56,7 @@
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>restricted area</web-resource-name>
+			<url-pattern>/home</url-pattern>
 			<url-pattern>/api/route</url-pattern>
 			<url-pattern>/api/route/*</url-pattern>
 		</web-resource-collection>
@@ -65,8 +66,12 @@
 	</security-constraint>
 
 	<login-config>
-		<auth-method>BASIC</auth-method>
+		<auth-method>FORM</auth-method>
 		<realm-name>other</realm-name>
+		<form-login-config>
+			<form-login-page>/login.html</form-login-page>
+			<form-error-page>/login.html</form-error-page>
+		</form-login-config>
 	</login-config>
 
 	<security-role>
