Configuração da autenticação LDAP no JBoss AS7

--- a/services/src/main/webapp/WEB-INF/web.xml
+++ b/services/src/main/webapp/WEB-INF/web.xml
@@ -67,7 +67,7 @@
 
 	<login-config>
 		<auth-method>FORM</auth-method>
-		<realm-name>other</realm-name>
+<!-- 		<realm-name>sharecarLDAP</realm-name> -->
 		<form-login-config>
 			<form-login-page>/login.html</form-login-page>
 			<form-error-page>/login.html</form-error-page>
