Autenticando no LDAP diretamente e removendo o uso do JAAS

--- a/services/src/main/resources/demoiselle.properties
+++ b/services/src/main/resources/demoiselle.properties
@@ -6,3 +6,11 @@ frameworkdemoiselle.persistence.conn1.driver.class=org.postgresql.Driver
 frameworkdemoiselle.persistence.conn1.url=jdbc:postgresql://localhost:5432/sharecar
 frameworkdemoiselle.persistence.conn1.username=postgres
 frameworkdemoiselle.persistence.conn1.password=postgres
+
+frameworkdemoiselle.ldap.provider.url=ldap://10.200.238.209:389
+frameworkdemoiselle.ldap.security.authentication=simple
+frameworkdemoiselle.ldap.bind.dn=uid=webdesdr\,ou=Servicos\,ou=corp\,dc=serpro\,dc=gov\,dc=br
+frameworkdemoiselle.ldap.bind.credential=webdesdr
+frameworkdemoiselle.ldap.base.ctx.dn=dc=serpro\,dc=gov\,dc=br
+frameworkdemoiselle.ldap.base.filter=(uid={0})
+frameworkdemoiselle.ldap.search.scope=SUBTREE_SCOPE
