--- a/services/pom.xml
+++ b/services/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>br.gov.frameworkdemoiselle</groupId>
 		<artifactId>demoiselle-servlet-parent</artifactId>
-		<version>2.4.0-BETA1</version>
+		<version>2.4.0-BETA2-SNAPSHOT</version>
 	</parent>
 
 	<dependencyManagement>
