--- a/services/src/main/webapp/WEB-INF/web.xml
+++ b/services/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0">
 
+	<!--
 	<listener>
 		<listener-class>br.gov.frameworkdemoiselle.util.ServletListener</listener-class>
 	</listener>
@@ -14,6 +16,7 @@
 		<filter-name>Demoiselle Servlet Filter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	-->
 
 	<filter>
 		<filter-name>Resteasy Filter</filter-name>
@@ -37,10 +40,6 @@
 	<filter-mapping>
 		<filter-name>UrlRewriteFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-		<!--
-		<dispatcher>REQUEST</dispatcher>
-		<dispatcher>FORWARD</dispatcher>
-		-->
 	</filter-mapping>
 
 	<context-param>
@@ -53,30 +52,4 @@
 		<param-value>true</param-value>
 	</context-param>
 
-	<security-constraint>
-		<web-resource-collection>
-			<web-resource-name>restricted area</web-resource-name>
-			<url-pattern>/home</url-pattern>
-			<url-pattern>/api/route</url-pattern>
-			<url-pattern>/api/route/*</url-pattern>
-			<url-pattern>/api/schedule</url-pattern>
-			<url-pattern>/api/schedule/*</url-pattern>			
-		</web-resource-collection>
-		<auth-constraint>
-			<role-name>*</role-name>
-		</auth-constraint>
-	</security-constraint>
-
-	<login-config>
-		<auth-method>FORM</auth-method>
-<!-- 		<realm-name>sharecarLDAP</realm-name> -->
-		<form-login-config>
-			<form-login-page>/login.html</form-login-page>
-			<form-error-page>/login.html</form-error-page>
-		</form-login-config>
-	</login-config>
-
-	<security-role>
-		<role-name>*</role-name>
-	</security-role>
 </web-app>
