--- a/src/main/resources/demoiselle.properties
+++ b/src/main/resources/demoiselle.properties
@@ -5,8 +5,8 @@ frameworkdemoiselle.persistence.conn1.password=postgres
 
 frameworkdemoiselle.ldap.provider.url=ldap://10.200.238.209:389
 frameworkdemoiselle.ldap.security.authentication=simple
-frameworkdemoiselle.ldap.bind.dn=uid=webdesdr\,ou=Servicos\,ou=corp\,dc=serpro\,dc=gov\,dc=br
+frameworkdemoiselle.ldap.bind.dn=uid=webdesdr,ou=Servicos,ou=corp,dc=serpro,dc=gov,dc=br
 frameworkdemoiselle.ldap.bind.credential=webdesdr
-frameworkdemoiselle.ldap.base.ctx.dn=dc=serpro\,dc=gov\,dc=br
+frameworkdemoiselle.ldap.base.ctx.dn=dc=serpro,dc=gov,dc=br
 frameworkdemoiselle.ldap.base.filter=(uid={0})
 frameworkdemoiselle.ldap.search.scope=SUBTREE_SCOPE
