--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,20 @@
 			<artifactId>demoiselle-core</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>br.gov.frameworkdemoiselle</groupId>
 			<artifactId>demoiselle-jdbc</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
+		
+		<!-- dependency>
+			<groupId>br.gov.frameworkdemoiselle</groupId>
+			<artifactId>demoiselle-mail</artifactId>
+			<scope>compile</scope>
+			<version>2.0.1</version>
+		</dependency-->
+		
 		<dependency>
 			<groupId>org.tuckey</groupId>
 			<artifactId>urlrewritefilter</artifactId>
@@ -131,5 +139,10 @@
 				<enabled>false</enabled>
 			</releases>
 		</repository>
+		<repository>
+			<id>demoiselle.sourceforge.net</id>
+			<name>Demoiselle Maven Repository</name>
+			<url>http://demoiselle.sourceforge.net/repository/release</url>
+		</repository>		
 	</repositories>
 </project>
