Ajustes para funcionar na versão 2.4.0-BETA2. Ajuste no script que pega o polígono da rota, a API do google foi atualizada.

--- a/src/main/resources/demoiselle.properties
+++ b/src/main/resources/demoiselle.properties
@@ -1,5 +1,5 @@
 frameworkdemoiselle.persistence.conn1.driver.class=org.postgresql.Driver
-frameworkdemoiselle.persistence.conn1.url=jdbc:postgresql://localhost:5432/sharecar
+frameworkdemoiselle.persistence.conn1.url=jdbc:postgresql://10.200.238.62:5432/sharecar
 frameworkdemoiselle.persistence.conn1.username=postgres
 frameworkdemoiselle.persistence.conn1.password=postgres
 
